Fixed HTML Validator warnings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ a {
 }
 /* the rocket */
 #better-designer p > img {
-    height: 2em;
+    width: 2$;
 }
 /*----------------------------------------------------------------------------
     Scroll to see more...
